images + tool cards

--- a/web/css/valex.css
+++ b/web/css/valex.css
@@ -1,5 +1,12 @@
 .app-sidebar .side-menu__icon {
     line-height: normal !important;
     font-size: 1.2rem;
-    
+}
+
+.card {
+    margin-block-end: 0rem;
+}
+
+.card.custom-card {
+    margin-block-end: 0rem;
 }
